image added.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ style.css
         <div class="div-2">
           <div class="div-2">
             <div class="rectangle"></div>
-            <img class="ma" src="img/m4a2659-1.png" />
+            <img class="ma" src="_M4A2659 1.png" />
           </div>
         </div>
         <div class="frame-5">
