--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@ style.css
             </div>
             <div class="div-wrapper"><div class="text-wrapper-5">Contact us</div></div>
           </div>
-          <img class="removebg" src="img/m4a2659-removebg-preview-1.png" />
+          <img class="removebg" src="portfolio/_M4A2659.png" />
         </div>
       </div>
       <div class="aboutme">
         <div class="div-2">
           <div class="div-2">
             <div class="rectangle"></div>
-            <img class="ma" src="_M4A2659 1.png" />
+            <img class="ma" src="_M4A2659.png" />
           </div>
         </div>
         <div class="frame-5">
