--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ style.css
             </div>
             <div class="div-wrapper"><div class="text-wrapper-5">Contact us</div></div>
           </div>
-          <img class="removebg" src="portfolio/_M4A2659.png" />
+          <img class="removebg" src="_M4A2659.png" />
         </div>
       </div>
       <div class="aboutme">
